FE [FIX] sidebar z-index

--- a/codeLink-app/src/app/components/sidebar/sidebar.component.scss
+++ b/codeLink-app/src/app/components/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
 
 #sidebar-wrapper {
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     background: #f7f7f7;
     min-height: 100vh;
     padding-top: 60px;
